Fix ignore modal z-index

--- a/less/_base.less
+++ b/less/_base.less
@@ -660,6 +660,7 @@ html, body {
 .ignore-modal {
   box-sizing: border-box;
   position: absolute;
+  z-index: 500;
   width: 200px;
   background: @postBG;
   box-shadow: @postShadow;
